# ModelGo

./: .gitignore  Cargo.toml  PERF.md  README.md  SPEC.md  audit_report.md  bench_output.txt  implementation_plan.md  leaks.txt  leaks_after.txt  rkyv_test.rs  run_bench_toks  run_bench_toks.rs  scratch  scratch.rs  scratch_toks.rs
benches/: latency.rs  subsystem_latency.rs
doc/: SPEC.md
examples/: aes_sbox.rs  asic_synthesis.rs  asic_synthesis_3bit.rs  bench_draft.rs  chaos_experiment.rs  math_discovery.rs  test_dual.rs  test_polymorphic_left.rs  test_rag_goal.rs
src/: agent_cli.rs  benchmarks.rs  biology_router.rs  chaos_state.rs  config.rs  daemon.rs  decision_engine.rs  dual_brain.rs  engine.rs  ffi.rs  fft_chaos.rs  jit_compiler.rs  lib.rs  loader.rs  main.rs  markdown_diffusion.rs  memory_mesh.rs  mmap_reader.rs  os_dispatch.rs  pdf_kit.rs  process_intent.rs  router.rs  self_evolving_loop.rs  spatial.rs  speculative_engine.rs  system2_verifier.rs  temporal_filter.rs  tiered_kv.rs  universal_solver.rs  universal_tensor.rs  video_toolbox.rs  visual_cache.rs  watcher.rs  zero_chunker.rs
src/science/: asic_objective.rs  assembly_funnel.rs  levy_search.rs  math_objective.rs  mod.rs  sat_compiler.rs
tests/: Turing_test.json  Turing_test.md  generate_tests.py  integration_tests.rs  turing_harness.rs
tests/it/: chaos_state.rs  decision_engine.rs  fft_chaos.rs  memory_mesh.rs  mmap_reader.rs  router.rs  self_evolving_loop.rs  speculative_engine.rs  system2_verifier.rs  turing_harness.rs  universal_solver.rs
