[package]
name = "model_go"
version = "0.1.0"
edition = "2024"

[dependencies]
union_code = { path = "../UnionCode" }
cdDB = { path = "../cdDB", features = ["dualcache-ff"] }
memmap2 = "0.9.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.37", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashbrown = "0.14.5"
libm = "0.2.16"
UnionTranslator = { path = "../uniontranslator" }
lazy_static = "1.4.0"
rustfft = "6.2.0"
vec101 = { path = "../vec101", features = ["std"] }
rkyv = { version = "0.7.42", features = ["validation"] }
safetensors = "0.7.0"
notify = "6.1.1"
pdf-extract = "0.10.0"
calamine = "0.35.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "subsystem_latency"
path = "benches/subsystem_latency.rs"
harness = false
